--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "db:migrate": "dotenv -e .env.local -- drizzle-kit migrate",
     "db:push": "dotenv -e .env.local -- drizzle-kit push",
     "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
-    "auth:generate": "dotenv -e .env.local -- npx @better-auth/cli generate --output src/db/schema.ts -y"
+    "auth:generate": "dotenv -e .env.local -- npx @better-auth/cli generate --output src/db/schema.ts -y",
+    "create-user": "dotenv -e .env.local -- tsx scripts/create-user.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.972.0",
     "@emotion/react": "^11.14.0",
+    "bcryptjs": "^2.4.3",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@neondatabase/serverless": "^1.0.2",
@@ -32,6 +35,7 @@
   "devDependencies": {
     "@better-auth/cli": "^1.4.17",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
