--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.4.17",
