--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.972.0",
     "@emotion/react": "^11.14.0",
-    "bcryptjs": "^2.4.3",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@neondatabase/serverless": "^1.0.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@vercel/otel": "^2.1.0",
+    "bcryptjs": "^2.4.3",
     "better-auth": "^1.0.0",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "kysely": "^0.28.10",
     "kysely-neon": "^2.0.2",
+    "logfire": "^0.12.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
