--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-s3": "^3.972.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@livekit/protocol": "^1.44.0",
     "@mui/material": "^7.3.5",
     "@neondatabase/serverless": "^1.0.2",
     "@opentelemetry/api": "^1.9.0",
@@ -28,6 +29,7 @@
     "drizzle-orm": "^0.45.1",
     "kysely": "^0.28.10",
     "kysely-neon": "^2.0.2",
+    "livekit-server-sdk": "^2.15.0",
     "logfire": "^0.12.0",
     "next": "16.1.4",
     "react": "19.2.3",
